syntax = "proto3";

package fort.myrmidon.pb;

import "Time.proto";


message TimedFrame {
	uint64 frameid = 1;
	Time   time    = 2;
}

message TrackingSegment {
	TimedFrame frame    = 1;
	string     filename = 2;
}

message MovieOffset {
	uint64 movieFrameID = 1;
	uint64 offset       = 2;
}

message MovieSegment {
	uint32 id            = 1;
	string path          = 2;
	uint64 trackingStart = 3;
	uint64 trackingEnd   = 4;
	uint64 movieStart    = 5;
	uint64 movieEnd      = 6;

	Time trackingStartTime = 7;

	repeated MovieOffset offsets = 8;


}

message TrackingDataDirectory {
	TimedFrame Start = 1;
	TimedFrame End   = 2;
}

message TrackingDataDirectoryFileLine {
	TrackingDataDirectory tdd        = 1;
	MovieSegment          movie      = 2;
	TrackingSegment       segment    = 3;
	TimedFrame            timedframe = 4;
}